--- a/login.css
+++ b/login.css
@@ -4,6 +4,57 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.navbar
+{
+    position:-webkit-sticky;
+}
+.navbar #Home
+{
+    font-weight: 600;
+}
+
+.navbar ul
+{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-decoration: none;
+    font-size: 20px;
+}
+.navbar select
+{
+    font-size: 20px;
+    border: none;
+    background: none;
+    padding-bottom: 5px;
+}
+
+.navbar{
+height: 70px;
+}
+.navbar ul a{
+    text-decoration: none;
+    font-size: 23px;
+    color: black;
+    border-radius: 10px;
+}
+
+.navbar select:hover
+{
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.navbar ul a:hover{
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.navbar h2
+{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-right: 50px;
+}
+
+
 main {
     display: flex;
     align-items: center;
