--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-
+*
+{
+    font-family: 'Roboto','Helvetica Neue', sans-serif;
+}
 body{
-    background: linear-gradient(to right,rgba(61, 61, 210, 0.813),pink);
+    background: linear-gradient(to right,rgba(49, 49, 214, 0.813),rgb(220, 163, 172));
     margin: 0px;
     padding: 0px;
 }
 .navbar
 {
     position: sticky;
+    top: 0;
+    height: 70px;
 }
 .navbar #Home
 {
@@ -21,17 +26,7 @@ body{
     text-decoration: none;
     font-size: 20px;
 }
-.navbar select
-{
-    font-size: 20px;
-    border: none;
-    background: none;
-    padding-bottom: 5px;
-}
 
-.navbar{
-height: 70px;
-}
 .navbar ul a{
     text-decoration: none;
     font-size: 23px;
@@ -39,18 +34,12 @@ height: 70px;
     border-radius: 10px;
 }
 
-.navbar select:hover
-{
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
 .navbar ul a:hover{
     cursor: pointer;
-    transition: background-color 0.3s ease;
 }
 .navbar h2
 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
     padding-right: 50px;
 }
 
@@ -97,6 +86,8 @@ main .leftcontent input
     width: 450px;
     border-radius: 15px;
     font-size: large;
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.249);
 }
 
 main .leftcontent button
